Fix price align.

--- a/css/common.css
+++ b/css/common.css
@@ -1297,6 +1297,7 @@ input{
 
 .goodRecommendListItem .textPrimary {
     font-size: 18px;
+    margin-left: -5px;
 }
 
 .goodRecommendListItem .textPrimary strong {
